--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </select>
             <!-- Bottoni -->
             <button type="submit" id="generate_ticket">Genera</button>
-            <button id="submit">Annulla</button>
+            <button id="refresh_page">Annulla</button>
         </div>
         <!-- Contenitore biglietto -->
         <div></div>
