Aggiunto innerHTML prezzo

--- a/index.html
+++ b/index.html
@@ -43,31 +43,29 @@
             <div id="ticket_display">
                 <div id="container_ticket">
                     <h2 class="t_up">Dettaglio Passeggeri</h2>
-                    <div class="d-flex justify_between">
+                    <div class="d-flex">
                         <div>
                             <h3 class="t_up">Nome Passeggero</h3>
                             <div class="nameP"></div>
                         </div>
-                        <div>
-                            <ul class="d-flex">
-                                <li>
-                                    <p>Offerta</p>
-                                    <p></p>
-                                </li>
-                                <li>
-                                    <p>Carrozza</p>
-                                    <p></p>
-                                </li>
-                                <li>
-                                    <p>Codice CP</p>
-                                    <p></p>
-                                </li>
-                                <li>
-                                    <p>Costo Biglietto</p>
-                                    <p></p>
-                                </li>
-                            </ul>
-                        </div>
+                        <ul class="d-flex justify_between">
+                            <li>
+                                <p>Offerta</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p>Carrozza</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p>Codice CP</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p>Costo Biglietto</p>
+                                <p id="price-ticket"></p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
