Corretto Output Biglietto

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <!-- Selettore età -->
                     <span>
                         <label for="fascia eta">Fascia d'età</label>
-                        <select name="eta passeggero" id="eta">
+                        <select name="eta passeggero" id="eta" placeholder="Seleziona">
+                            <option value="-">-</option>
                             <option value="Under">Under 18</option>
                             <option value="Maggiorenne">Maggiorenne</option>
                             <option value="Over">Over 65</option>
