--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
             <section id="ticket_generator">
                 <h1 class="t_al-c t_up">Il tuo biglietto</h1>
                 <div id="ticket_display">
-                    <div id="container_ticket">
+                    <div id="container_ticket" class="t_al-l">
                         <h2 class="t_up t_al-l">Dettaglio Passeggeri</h2>
-                        <div class="d-flex h-100">
+                        <h3 id="ticketN"></h3>
+                        <div class="d-flex h-100 t_al-c">
                             <div id="passenger_name-data">
                                 <h3 class="t_up">Nome Passeggero</h3>
                                 <div id="nameP" class="t_up"></div>
